--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,53 +20,45 @@
     <div class="Profilepicture flex items-center justify-center">
       <img class="label-center rounded-full h-60 w-60 mt-10" [src]="getProfile.pictureUrl">
     </div>
-    <div class="label-center h-20">
-      <h1>Name : {{getProfile.displayName}}</h1>
+    <div class="show-detail">
+      <h1 class="label-center mt-10">Name : {{getProfile.displayName}}</h1>
+      <h1 class="label-center m-5">User ID : {{getProfile.userId}}</h1>
+      <!-- <h1 class="label-center">email : {{idToken?.email}}</h1> -->
     </div>
-    <div class="label-center">
-      <h1>User ID : {{getProfile.userId}}</h1>
-    </div>
-  </div>
-  <div style="text-align:center">
-    <h1>
-      Ngx-Webcam Demo
-    </h1>
-  
-    <div>
-      <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)" *ngIf="showWebcam"
-              [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
-              [videoOptions]="videoOptions"
-              [imageQuality]="1"
-              (cameraSwitched)="cameraWasSwitched($event)"
-              (initError)="handleInitError($event)"
-      ></webcam>
-      <br/>
-      <button class="actionBtn" (click)="triggerSnapshot();">Take A Snapshot</button>
-      <button class="actionBtn" (click)="toggleWebcam();">Toggle Webcam</button>
-      <br/>
-      <button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button>
-      <!-- <input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch"><label for="cameraSwitchCheckbox">Allow Camera Switch</label>
-      <br/>
-      DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">
-      <button (click)="showNextWebcam(deviceId);">Activate</button> -->
+    <div class="mt-5" style="text-align:center">
+      <h1>
+        Ngx-Webcam Demo
+      </h1>
+
+      <div>
+        <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"
+          *ngIf="showWebcam" [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable"
+          [videoOptions]="videoOptions" [imageQuality]="1" (cameraSwitched)="cameraWasSwitched($event)"
+          (initError)="handleInitError($event)"></webcam>
+        <br />
+        <button class="actionBtn h-10 w-40 mr-5 bg-green-300 hover:bg-green-400 rounded"
+          (click)="triggerSnapshot();">Take A Snapshot</button>
+        <button class="actionBtn h-10 w-40 bg-red-300 hover:bg-red-400 rounded" (click)="toggleWebcam();">Toggle
+          Webcam</button>
+        <br />
+        <!-- <button class="actionBtn" (click)="showNextWebcam(true);" [disabled]="!multipleWebcamsAvailable">Next Webcam</button> -->
+        <!-- <input id="cameraSwitchCheckbox" type="checkbox" [(ngModel)]="allowCameraSwitch"><label for="cameraSwitchCheckbox">Allow Camera Switch</label>
+        <br/>
+        DeviceId: <input id="deviceId" type="text" [(ngModel)]="deviceId" style="width: 500px">
+        <button (click)="showNextWebcam(deviceId);">Activate</button> -->
+      </div>
     </div>
   </div>
-  
-  <div class="snapshot" *ngIf="webcamImage">
-    <h2>Nice one!</h2>
-    <img [src]="webcamImage.imageAsDataUrl"/>
+
+
+  <div class="snapshot flex justify-center items-center m-10" *ngIf="webcamImage">
+    <!-- <h2 class="flex">Nice one!</h2> -->
+    <img [height]="600" [width]="600" [src]="webcamImage.imageAsDataUrl" />
   </div>
-  
+
   <h4 *ngIf="errors.length > 0">Messages:</h4>
   <ul *ngFor="let error of errors">
     <li>{{error | json}}</li>
-  </ul>
-  
-  <h2>Like this project on GitHub:</h2>
-  <ul class="links">
-    <li>
-      <h2><a target="_blank" rel="noopener" href="https://github.com/basst314/ngx-webcam">Ngx-Webcam / GitHub</a></h2>
-    </li>
   </ul>
 </body>
 
