--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     <div class="show-detail">
       <h1 class="label-center mt-10">Name : {{getProfile.displayName}}</h1>
       <h1 class="label-center m-5">User ID : {{getProfile.userId}}</h1>
-      <!-- <h1 class="label-center">email : {{idToken?.email}}</h1> -->
+      <h1 class="label-center">email : {{idToken.email}}</h1>
     </div>
     <div class="mt-5" style="text-align:center">
       <h1>
