--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,25 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
+/* @layer components{
   .label-center{
     @apply flex items-center justify-center
   }
 }
+
+.img-camera{
+  position: absolute ;
+  width: 15rem;
+  height: 15rem;
+  margin-top: 7.5rem;
+}
+
+.camera{
+  width: 50rem;
+}
+
+.camera-mirror{
+  transform: scaleX(-1);
+}
+
+ */
